package com.marco.rentflow.core.domain.property;

public enum PropertyStatus {
    AVAILABLE,
    RENTED,
    MAINTENANCE
}
