package com.marco.rentflow.core.domain.subscription;

public enum SubscriptionStatus {
    ACTIVE,
    PAST_DUE,
    CANCELLED
}
